fix gradient position on Safari

--- a/components/landing/Hero/hero.module.scss
+++ b/components/landing/Hero/hero.module.scss
@@ -39,6 +39,8 @@
 .gradient {
   position: absolute;
   top: 0;
+  right: 0;
+  left: 0;
   bottom: 0;
 
   backface-visibility: hidden;
